fix: rounded corners for group avatar in 'group info'
A hacky solution by adding the same background color of the default SVG icon, making the SVG to fit the 'rounded corners for avatars' setting

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -944,6 +944,9 @@ ac5 = var(--ac-5)
             rad: var(--r-avatars) i
         }
 
+        /// Add rounded corners to the default group SVG avatar.
+        /.Ao0On { c: 0 0 bg5 }
+
         /// Tweak default-user icons.
         if ( radius-a != '50%' ) {
             /[style *= 'height: 26px'],
