fix: 'new group' bottom divider to hide drawer bg
The default `--drawer-background` & `--border-default` vars are the same color. Due to the reduction of tones, a solution is required that prevents the background of the drawer from being displayed (a solution that should also be embedded in the native version).

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -947,6 +947,9 @@ ac5 = var(--ac-5)
         /// Add rounded corners to the default group SVG avatar.
         /.Ao0On { c: 0 0 bg5 }
 
+        /// Fix 'new group' bottom divider to hide drawer background-color.
+        /._1g1ui > ._1ByLM { margin-left: unset i }
+
         /// Tweak default-user icons.
         if ( radius-a != '50%' ) {
             /[style *= 'height: 26px'],
