--- a/wa.user.css
+++ b/wa.user.css
@@ -6,15 +6,15 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.14.0
+@version      2.15.0
 @license      MIT
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
   :root:not(#z),
   .dark:not(#z) {
-    --version: 'Dark-WhatsApp 2.14.0 — June 18th, 2020';
-    --message: 'Towards v3 of DWA! Updated to `v2.2025.6` of WhatsApp Web and fixed options for broken RTL messages; check the changelog to see what is new!';
+    --version: 'Dark-WhatsApp Lite 2.15.0 — June 25th, 2020';
+    --message: 'Towards v3 of DWA! Porting more features, and improving more things; check the changelog to see what is new!';
     --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
     --ui-font: 'font_name', Segoe UI, Helvetica Neue, Helvetica, Lucida Grande, Arial, Ubuntu, Cantarell, Fira Sans, sans-serif !important;
     --r-menus: 4px;
@@ -169,12 +169,12 @@
     --checkbox-mark-rgb: var(--white-rgb);
     --compose-background: var(--bg-1);
     --compose-background-rgb: var(--bg-1-rgb);
-    --compose-background-focused: #203946;
-    --compose-background-focused-rgb: 32, 57, 70;
+    --compose-background-focused: var(--bg-0);
+    --compose-background-focused-rgb: var(--bg-0-rgb);
     --compose-border: var(--bg-5);
     --compose-border-rgb: var(--bg-5-rgb);
-    --compose-border-focused: #274656;
-    --compose-border-focused-rgb: 39, 70, 86;
+    --compose-border-focused: var(--bg-5);
+    --compose-border-focused-rgb: var(--bg-5-rgb);
     --compose-panel-background: var(--bg-3);
     --compose-panel-background-rgb: var(--bg-3-rgb);
     --compose-primary: var(--fg-1);
@@ -201,8 +201,8 @@
     --dropdown-background-hover-rgb: var(--bg-3-rgb);
     --empty-state-background: var(--bg-3);
     --empty-state-background-rgb: var(--bg-3-rgb);
-    --empty-state-icon: #757c81;
-    --empty-state-icon-rgb: 117, 124, 129;
+    --empty-state-icon: var(--fg-4);
+    --empty-state-icon-rgb: var(--fg-4-rgb);
     --focus: var(--ac-3);
     --focus-rgb: var(--ac-3-rgb);
     --focus-animation: var(--ac-3);
@@ -246,7 +246,7 @@
     --intro-secondary: var(--fg-3);
     --intro-secondary-rgb: var(--fg-3-rgb);
     --inverse: #f1f1f2;
-    --inverse-rgb: var(--fg-3-rgb);
+    --inverse-rgb: var(--fg-0-rgb);
     --labels-icon: rgba(241,241,242,0.4);
     --labels-icon-rgb: var(--fg-3-rgb);
     --link: var(--ac-0);
@@ -261,7 +261,7 @@
     --location-cluster-background-rgb: var(--bg-1-rgb);
     --media-editor-control: #1c313f;
     --media-editor-control-rgb: 28, 49, 63;
-    --media-viewer-background: rgba(var(--bg-1-rgb), 0.95);
+    --media-viewer-background: rgba(var(--bg-1-rgb), 0.8);
     --media-viewer-background-rgb: var(--bg-1-rgb);
     --media-viewer-button-background: var(--bg-3);
     --media-viewer-button-background-rgb: var(--bg-3-rgb);
@@ -271,20 +271,20 @@
     --menu-tabs-list-active-rgb: var(--ac-0-rgb);
     --message-background-deep: var(--bg-0);
     --message-background-deep-rgb: var(--bg-0-rgb);
-    --message-placeholder-icon: rgba(204,204,204,0.302);
-    --message-placeholder-icon-rgb: 204, 204, 204;
+    --message-placeholder-icon: var(--fg-3);
+    --message-placeholder-icon-rgb: var(--fg-3-rgb);
     --message-primary: var(--fg-1);
     --message-primary-rgb: var(--fg-1-rgb);
     --message-selection-highlight: rgba(var(--ac-0-rgb), 0.1);
     --message-selection-highlight-rgb: var(--ac-0-rgb);
-    --modal-backdrop: rgba(var(--bg-0-rgb), 0.95);
+    --modal-backdrop: rgba(var(--bg-1-rgb), 0.7);
     --modal-backdrop-rgb: var(--bg-0-rgb);
     --modal-backdrop-solid: var(--bg-0);
     --modal-backdrop-solid-rgb: var(--bg-0-rgb);
     --modal-background: var(--bg-2);
     --modal-background-rgb: var(--bg-2-rgb);
-    --notification-biz-background: var(--bg-3);
-    --notification-biz-background-rgb: var(--bg-3-rgb);
+    --notification-biz-background: var(--bg-0);
+    --notification-biz-background-rgb: var(--bg-0-rgb);
     --notification-biz-text: #55fad9;
     --notification-biz-text-rgb: 85, 250, 217;
     --notification-e2e-background: var(--bg-0);
@@ -315,15 +315,15 @@
     --panel-background-deep-rgb: var(--bg-2-rgb);
     --panel-background-deeper: var(--bg-3);
     --panel-background-deeper-rgb: var(--bg-3-rgb);
-    --panel-background-hover: #1b272e;
-    --panel-background-hover-rgb: 27, 39, 46;
+    --panel-background-hover: var(--bg-4);
+    --panel-background-hover-rgb: var(--bg-4-rgb);
     --panel-background-lighter: var(--bg-3);
     --panel-background-lighter-rgb: var(--bg-3-rgb);
     --panel-header-background: var(--bg-3);
     --panel-header-background-rgb: var(--bg-3-rgb);
     --panel-header-icon: var(--fg-3);
     --panel-header-icon-rgb: var(--fg-3-rgb);
-    --panel-primary: rgba(241,241,242,0.349);
+    --panel-primary: var(--fg-3);
     --panel-primary-rgb: var(--fg-3-rgb);
     --payment-amount: #00a593;
     --payment-amount-rgb: 0, 164.8, 146.90743;
@@ -335,8 +335,8 @@
     --payment-status-success-rgb: 64, 207, 108;
     --payment-status-waiting: var(--fg-1);
     --payment-status-waiting-rgb: var(--fg-3-rgb);
-    --photopicker-overlay-background: rgba(33,44,49,0.8);
-    --photopicker-overlay-background-rgb: 33, 44, 49;
+    --photopicker-overlay-background: rgba(var(--bg-3-rgb), 0.8);
+    --photopicker-overlay-background-rgb: var(--bg-3-rgb);
     --popup-panel-background: var(--bg-2);
     --popup-panel-background-rgb: var(--bg-2-rgb);
     --primary: var(--fg-2);
@@ -349,8 +349,8 @@
     --primary-title-rgb: var(--fg-2-rgb);
     --product-thumb-background: var(--bg-3);
     --product-thumb-background-rgb: var(--bg-3-rgb);
-    --product-thumb-background-deeper: #2b3e49;
-    --product-thumb-background-deeper-rgb: 43.232, 61.76, 72.568;
+    --product-thumb-background-deeper: var(--bg-2);
+    --product-thumb-background-deeper-rgb: var(--bg-2-rgb);
     --progress-background: var(--bg-2);
     --progress-background-rgb: var(--bg-2-rgb);
     --progress-primary: var(--ac-0);
@@ -367,7 +367,7 @@
     --ptt-green-rgb: var(--green);
     --ptt-message-blue: var(--blue);
     --ptt-message-blue-rgb: var(--blue-rgb);
-    --quick-action-button: var(--fg-3);
+    --quick-action-button: rgba(var(--fg-3-rgb), 0.5);
     --quick-action-button-rgb: var(--fg-3-rgb);
     --quick-action-button-background: var(--bg-4);
     --quick-action-button-background-rgb: var(--bg-4-rgb);
@@ -413,8 +413,8 @@
     --suspicious-background-rgb: 239, 105, 122;
     --system-message-background: var(--ac-5);
     --system-message-background-rgb: var(--ac-5-rgb);
-    --system-message-text: var(--fg-1);
-    --system-message-text-rgb: 241, 241, 242;
+    --system-message-text: rgba(var(--fg-1-rgb), 0.87);
+    --system-message-text-rgb: var(--fg-1-rgb);
     --teal-hover: #00b7a1;
     --teal-hover-rgb: 0, 183, 161;
     --teal-pale: #5fc8bc;
@@ -423,15 +423,15 @@
     --thumb-border-active-rgb: var(--bg-2-rgb);
     --thumb-border-viewer-active: var(--fg-3);
     --thumb-border-viewer-active-rgb: var(--fg-3-rgb);
-    --toast-background: var(--bg-3);
+    --toast-background: rgba(var(--bg-3-rgb), 0.96);
     --toast-background-rgb: var(--bg-3-rgb);
-    --tooltip-background: var(--bg-1);
-    --tooltip-background-rgb: var(--bg-1);
+    --tooltip-background: rgba(var(--bg-4-rgb), 0.85);
+    --tooltip-background-rgb: var(--bg-4);
     --typing: var(--ac-0);
     --typing-rgb: var(--ac-0-rgb);
     --unread-background: var(--bg-3);
     --unread-background-rgb: var(--bg-3-rgb);
-    --unread-bar-background: var(--bg-0);
+    --unread-bar-background: rgba(var(--bg-0-rgb), 0.7);
     --unread-bar-background-rgb: var(--bg-0-rgb);
     --unread-marker-background: var(--ac-0);
     --unread-marker-background-rgb: var(--ac-0-rgb);
@@ -509,6 +509,10 @@
     color: var(--fg-0) !important;
     background-color: var(--bg-0) !important;
   }
+  html > body option {
+    color: var(--fg-1) !important;
+    background-color: var(--bg-3) !important;
+  }
   html > body,
   html > body button,
   html > body input {
@@ -556,13 +560,37 @@
   }
   [style *= 'd-color: rgb(237, 233, 228)'] {
     position: relative;
+    background-color: var(--bg-1) !important;
+    --blue-light: var(--ac-3);
+    --inverse: var(--ac-3);
   }
   [style *= 'd-color: rgb(237, 233, 228)']::before {
-    content: 'Use this with Dark-WhatsApp';
+    content: '';
+    filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o));
+    background: var(--chat-image) !important;
     position: absolute;
-    font-size: 15px;
+    height: 100%;
     width: 100%;
-    color: #000 !important;
+  }
+  [style *= 'd-color: rgb(237, 233, 228)']:first-child {
+    border: 4px solid var(--bg-3) !important;
+  }
+  [style *= 'd-color: rgb(237, 233, 228)']:first-child,
+  [style *= 'd-color: rgb(237, 233, 228)']:first-child::after {
+    width: calc(3 * 82px + 30px) !important;
+  }
+  [style *= 'd-color: rgb(237, 233, 228)']:first-child span {
+    font-size: 0 !important;
+  }
+  [style *= 'd-color: rgb(237, 233, 228)']:first-child span::before {
+    content: 'Use this with Dark-WhatsApp';
+    font-size: 16px !important;
+  }
+  [style *= 'rgb(222, 227, 233)'],
+  [style *= 'rgb(217, 218, 222)'],
+  [style *= 'rgb(192, 193, 196)'] {
+    border: 4px solid var(--bg-3) !important;
+    background-color: var(--bg-1) !important;
   }
   @supports (scrollbar-width: thin) {
     * {
@@ -589,7 +617,8 @@
   ._18cLH,
   ._3_Hvt,
   ._2H1bg,
-  ._1S7ke {
+  ._1S7ke,
+  ._2SNSv {
     border-radius: var(--r-avatars) !important;
   }
   .emojik {
@@ -643,12 +672,6 @@
       border: 1px solid var(--bg-5) !important;
       border-radius: var(--r-menus) !important;
     }
-  }
-  .color-1 {
-    color: var(--ac-0) !important;
-  }
-  .bg-color-1 {
-    background-color: var(--ac-0) !important;
   }
   [data-icon = 'status-v3-unread'] [fill = '#009588'] {
     fill: var(--ac-0) !important;
@@ -776,6 +799,14 @@
     background-position: var(--bg-pos) !important;
     background-repeat: var(--bg-rep) !important;
     background-size: var(--bg-size) !important;
+    content: '' !important;
+  }
+  div div:first-child > .aGjYp::before,
+  span div:first-child > .aGjYp::before {
+    content: none;
+  }
+  #app > div ._3xpD_ {
+    border-radius: var(--r-inputs) !important;
   }
   #app > div > span > div[style ^= 'transform-origin:'][tabindex],
   #app > div ._2s_eZ[style ^= 'transform-origin:'][tabindex] {
@@ -809,15 +840,13 @@
     background-color: var(--bg-1) !important;
   }
   @media (min-width: 1441px) {
-    #app > div > [tabindex] {
+    #app > div > [tabindex],
+    [data-animate-status-v3-modal-background] > div:first-child {
+      width: calc(100% - 38px) !important;
+      max-width: var(--app-width) !important;
       border-radius: var(--r-menus) !important;
       border: 1px solid var(--bg-5) !important;
       box-shadow: var(--bshadow) !important;
-    }
-    #app > div > [tabindex],
-    ._11ARv {
-      width: calc(100% - 38px) !important;
-      max-width: var(--app-width) !important;
     }
   }
   #app > div > [tabindex]::after {
@@ -831,12 +860,12 @@
   #app > div > [tabindex] ._3qx7_::after {
     display: none !important;
   }
+  #app > div > [tabindex] .gQzdc ._1pp2N,
+  #app > div > [tabindex] ._3qx7_ ._1pp2N {
+    padding-right: 5px;
+  }
   ._1yO24 {
     animation: none !important;
-  }
-  #app > div > [tabindex] .gQzdc label,
-  #app > div > [tabindex] ._3qx7_ label {
-    border-radius: var(--r-inputs) !important;
   }
   #app > div > [tabindex] #side > header {
     border-bottom: 1px solid var(--bg-5) !important;
@@ -886,6 +915,19 @@
   #main > header::after {
     content: unset !important;
   }
+  #main ._1E1g0 {
+    border: 1px solid rgba(var(--fg-1-rgb), 0.3);
+    text-shadow: 0 1px 0 rgba(var(--fg-1-rgb), 0.3);
+  }
+  #main ._1E1g0._2n04H {
+    border: 1px solid rgba(var(--notification-e2e-text-rgb), 0.3);
+  }
+  #main ._1E1g0._2nH_- {
+    border: 1px solid rgba(var(--notification-biz-text-rgb), 0.3);
+  }
+  #main ._2J60S {
+    border: 1px solid var(--bg-5);
+  }
   [data-asset-chat-background-light] {
     filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o));
     background-position: var(--chat-bg-p) !important;
@@ -925,22 +967,189 @@
     right: 5px !important;
     bottom: 3px !important;
   }
-  #main > footer > .copyable-area,
-  #main > footer [data-list-scroll-container] {
+  #main> header ~ div[style *= 'height: 0px'] {
     border-top: 1px solid var(--bg-5) !important;
+  }
+  #main > footer .velocity-animating,
+  #main > footer div[style $= 'translateY(0%);'],
+  #main > footer div[style $= 'translateY(0px);'] {
+    box-shadow: 0 -1px 0 var(--bg-5) !important;
+  }
+  #main > footer [data-list-scroll-container] {
+    border-bottom: 1px solid var(--bg-5) !important;
+    box-shadow: 0 -1px var(--bg-5) !important;
   }
   #main > footer + span > ._2pAWd {
     border-top: 1px solid var(--bg-5) !important;
     border-left: 1px solid var(--bg-5) !important;
   }
   #main > footer ._3eShu {
-    border-top: 1px solid var(--bg-5) !important;
     border-bottom: 1px solid var(--bg-5) !important;
   }
   #main > footer ._3uMse {
     border-radius: var(--r-inputs) !important;
   }
   @media screen and (max-height: 500px) {
+  :not(#z) .color-0 {
+    color: #268bd2 !important;
+  }
+  :not(#z) .color-1 {
+    color: #2aa198 !important;
+  }
+  :not(#z) .color-2 {
+    color: #859900 !important;
+  }
+  :not(#z) .color-3 {
+    color: #6c71c4 !important;
+  }
+  :not(#z) .color-4 {
+    color: #f33682 !important;
+  }
+  :not(#z) .color-5 {
+    color: #dc322f !important;
+  }
+  :not(#z) .color-6 {
+    color: #df4b16 !important;
+  }
+  :not(#z) .color-7 {
+    color: #e5c512 !important;
+  }
+  :not(#z) .color-8 {
+    color: #268bd2 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .color-9 {
+    color: #2aa198 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .color-10 {
+    color: #859900 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .color-11 {
+    color: #6c71c4 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .color-12 {
+    color: #f33682 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .color-13 {
+    color: #dc322f !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .color-14 {
+    color: #df4b16 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .color-15 {
+    color: #e5c512 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .color-15 {
+    color: #268bd2 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .color-16 {
+    color: #2aa198 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .color-17 {
+    color: #859900 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .color-18 {
+    color: #6c71c4 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .color-19 {
+    color: #f33682 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .color-20 {
+    color: #dc322f !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .bg-color-0 {
+    background-color: #268bd2 !important;
+  }
+  :not(#z) .bg-color-1 {
+    background-color: #2aa198 !important;
+  }
+  :not(#z) .bg-color-2 {
+    background-color: #859900 !important;
+  }
+  :not(#z) .bg-color-3 {
+    background-color: #6c71c4 !important;
+  }
+  :not(#z) .bg-color-4 {
+    background-color: #f33682 !important;
+  }
+  :not(#z) .bg-color-5 {
+    background-color: #dc322f !important;
+  }
+  :not(#z) .bg-color-6 {
+    background-color: #df4b16 !important;
+  }
+  :not(#z) .bg-color-7 {
+    background-color: #e5c512 !important;
+  }
+  :not(#z) .bg-color-8 {
+    background-color: #268bd2 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .bg-color-9 {
+    background-color: #2aa198 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .bg-color-10 {
+    background-color: #859900 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .bg-color-11 {
+    background-color: #6c71c4 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .bg-color-12 {
+    background-color: #f33682 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .bg-color-13 {
+    background-color: #dc322f !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .bg-color-14 {
+    background-color: #df4b16 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .bg-color-15 {
+    background-color: #e5c512 !important;
+    filter: hue-rotate(20deg);
+  }
+  :not(#z) .bg-color-15 {
+    background-color: #268bd2 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .bg-color-16 {
+    background-color: #2aa198 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .bg-color-17 {
+    background-color: #859900 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .bg-color-18 {
+    background-color: #6c71c4 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .bg-color-19 {
+    background-color: #f33682 !important;
+    filter: hue-rotate(40deg);
+  }
+  :not(#z) .bg-color-20 {
+    background-color: #dc322f !important;
+    filter: hue-rotate(40deg);
+  }
     #app > div > [tabindex] {
       min-height: auto;
     }
