--- a/wa.user.styl
+++ b/wa.user.styl
@@ -58,7 +58,7 @@
 @var range    bg_opacity 'Background image opacity' [0.4, 0.0, 1, 0.01]
 @var range    bg_blur    'Background image blur size' [0, 0, 50, 1, 'px']
 @var range    bg_hue     'Background image hue' [320, 0, 360, 1, 'deg']
-@var range    bg_invert  'Background image invert colors' [0, 0.0, 1, 0.1]
+@var range    bg_invert  'Background image invert colors' [0, 0.0, 1, 0.01]
 @var text     bg_size    'Background image size' cover
 @var text     bg_pos     'Background image position' center
 @var text     bg_rep     'Background image repeat' no-repeat
@@ -70,7 +70,7 @@
 @var checkbox chat_bg    'Enable chat background image' 1
 @var text     chat_image 'Custom image for chat' url('https://web.whatsapp.com/img/bg-chat-tile_9e8a2898faedb7db9bf5638405cf81ae.png')
 @var range    chat_bg_o  'Chat background image opacity' [0.15, 0.0, 1, 0.01]
-@var range    chat_bg_i  'Chat background image inverted colors' [0.6, 0.0, 1, 0.1]
+@var range    chat_bg_iv 'Chat background image inverted colors' [0.6, 0.0, 1, 0.01]
 @var text     chat_bg_s  'Chat background image size' initial
 @var text     chat_bg_p  'Chat background image position' top left
 @var text     chat_bg_r  'Chat background image repeat' repeat
@@ -318,7 +318,7 @@ ac5 = var(--ac-5)
         /// Custom chat background.
         --chat-image: chat_image
         --chat-bg-o:  chat_bg_o
-        --chat-bg-i:  chat_bg_i
+        --chat-bg-i:  chat_bg_iv
         --chat-bg-s:  chat_bg_s
         --chat-bg-p:  chat_bg_p
         --chat-bg-r:  chat_bg_r
@@ -1817,7 +1817,7 @@ ac5 = var(--ac-5)
 
         --chat-image: chat_image;
         --chat-bg-o : chat_bg_o;
-        --chat-bg-i : chat_bg_i;
+        --chat-bg-i : chat_bg_iv;
         --chat-bg-s : chat_bg_s;
         --chat-bg-p : chat_bg_p;
         --chat-bg-r : chat_bg_r;
