feat: add custom DWA intro tweaks to dark mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -871,7 +871,7 @@ ac5 = var(--ac-5)
         }
 
         /// Intro image.
-        [data-asset-intro-image-light] {
+        [data-asset-intro-image-dark], [data-asset-intro-image-light] {
             max-width: 200px
             max-height: 200px
             background-image: var(--intro-image)
