feat: add a background color to the status author & publish date
Illustrative image: https://user-images.githubusercontent.com/20738487/86270522-0932b380-bbd4-11ea-9479-bdba2bcd354d.png

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1068,6 +1068,15 @@ ac5 = var(--ac-5)
                 }
             }
 
+            /// Background color for author & publish date. @upstream
+            /._2yhFa {
+                margin: auto
+                padding: 5px 8px 8px
+                min-width: 150px
+                rad: var(--r-inputs)
+                background-color: 0 0 to_rgba('bg-1', 0.5)
+            }
+
             /// Fill color for unread icon. @upstream
             /[data-icon = 'status-v3-unread'] {
                 [fill = '#009588'] { fill: ac0 i }
