fix: background color to the status author & publish date
mixed functions.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1074,7 +1074,7 @@ ac5 = var(--ac-5)
                 padding: 5px 8px 8px
                 min-width: 150px
                 rad: var(--r-inputs)
-                background-color: 0 0 to_rgba('bg-1', 0.5)
+                background-color: to_rgba('bg-1', 0.5)
             }
 
             /// Fill color for unread icon. @upstream
