feat: fix custom chat bg image options
The `background` was overriding custom position/repeat/size, which is
similar to what happened with custom app bg image options before.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1199,8 +1199,8 @@ ac5 = var(--ac-5)
                 height: unset; width: unset;
                 filter: b o t h
                 background-color: transparent i
-                background-image: var(--bg-image) i
                 background-position: var(--bg-pos) i
+                background-image: var(--bg-image) i
                 background-repeat: var(--bg-rep) i
                 background-size: var(--bg-size) i
                 content: '' i
@@ -1417,10 +1417,10 @@ ac5 = var(--ac-5)
         /// Feat -> Custom chat background.
         /[data-asset-chat-background-dark], /[data-asset-chat-background-light] {
             filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o))
+            background-image: var(--chat-image) i
             background-position: var(--chat-bg-p) i
             background-repeat: var(--chat-bg-r) i
             background-size: var(--chat-bg-s) i
-            background: var(--chat-image) i
             opacity: 1 i
 
             /// Feat -> Show chat image.
