landing: remove stripe background

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1117,7 +1117,7 @@ ac5 = var(--ac-5)
 
     // Login page.
     .landing {
-        &-wrapper::before { c: 0 0 bg2 }
+        &-wrapper::before { content: unset i }
         &-header {
             position: relative
 
