--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.16.0
+@version      2.16.1
 @license      MIT
 @preprocessor stylus
 
@@ -268,8 +268,8 @@ ac5 = var(--ac-5)
 @-moz-document domain('web.whatsapp.com') {
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 2.16.0 — July 1st, 2020';
-        --message: 'Towards v3 of DWA! Updating to `2.2027.9` of WhatsApp ' + \
+        --version: 'Dark-WhatsApp 2.16.1 — July 3rd, 2020';
+        --message: 'Towards v3 of DWA! Updating to `2.2027.10` of WhatsApp ' + \
                    'Web; check the changelog to see what is new!';
         --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
 
