chat: add divider to emoji/gif/sticker menu

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1327,6 +1327,9 @@ ac5 = var(--ac-5)
             /// Remove shadows from drawer sections.
             /._2Bps4 { box-shadow: 0 0 0 1px bg4 i }
         }
+
+        /// Main -> Emoji/gif/sticker menu divider. @upstream
+        ._1WWP0 { box-shadow: 1px 0 0 bg5 i }
     }
 
     // Global -> Icons.
