global: apply image/video timestamps to drawers

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1448,7 +1448,7 @@ ac5 = var(--ac-5)
         [data-js-context-icon = 'true'] { c: fg3 }
 
         /// Add background to media message timestamps.
-        [style *= 'width'][style *= 'height'] + div {
+        /[style *= 'width'][style *= 'height'] + div {
             /// Images.
             &._3yTyY, &._2CHFo {
                 padding: 2px 4px i
@@ -1457,7 +1457,7 @@ ac5 = var(--ac-5)
             }
 
             /// Videos.
-            ../ .video-thumb {
+            /.video-thumb {
                 /// Length/Timestamp.
                 .len7M, + ._2DfqO {
                     padding: 2px 4px i
