--- a/wa.user.css
+++ b/wa.user.css
@@ -6,15 +6,15 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.16.1
+@version      2.16.2
 @license      MIT
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
   :root:not(#z),
   .dark:not(#z) {
-    --version: 'Dark-WhatsApp Lite 2.16.1 — July 3rd, 2020';
-    --message: 'Towards v3 of DWA! Updating to `2.2027.10` of WhatsApp Web; check the changelog to see what is new!';
+    --version: 'Dark-WhatsApp Lite 2.16.2 — July 22nd, 2020';
+    --message: 'Towards v3 of DWA! Updating to `2.2029.4` of WhatsApp Web; check the changelog to see what is new!';
     --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
     --ui-font: 'font_name', Segoe UI, Helvetica Neue, Helvetica, Lucida Grande, Arial, Ubuntu, Cantarell, Fira Sans, sans-serif !important;
     --r-menus: 4px;
@@ -928,14 +928,14 @@
   #app > div > [tabindex] #side > header + span > div [data-icon = 'x'] svg path {
     fill: var(--fg-5);
   }
-  #app > div > [tabindex] ._14VS3 > ._1V8rX {
-    border-left: 1px solid var(--bg-5) !important;
-  }
   #app > div > [tabindex] ._14VS3 > ._1V8rX .copyable-area > header {
     border-bottom: 1px solid var(--bg-5) !important;
   }
   ._2Bps4 {
     box-shadow: 0 0 0 1px var(--bg-4) !important;
+  }
+  #app > div > [tabindex] ._1WWP0 {
+    box-shadow: 1px 0 0 var(--bg-5) !important;
   }
   span[class][data-icon = 'checkbox-round-checked'] [fill = '#00BFA5'] {
     fill: var(--ac-0);
@@ -960,7 +960,6 @@
     font-weight: normal !important;
   }
   #main > header {
-    border-right: none !important;
     border-bottom: 1px solid var(--bg-5) !important;
     border-color: var(--bg-5) !important;
   }
@@ -1004,19 +1003,19 @@
   #main [data-js-context-icon = 'true'] {
     color: var(--fg-3) !important;
   }
-  #main [style *= 'width'][style *= 'height'] + div._3yTyY,
-  #main [style *= 'width'][style *= 'height'] + div._2CHFo {
+  [style *= 'width'][style *= 'height'] + div._3yTyY,
+  [style *= 'width'][style *= 'height'] + div._2CHFo {
     padding: 2px 4px !important;
     background-color: rgba(var(--bg-1-rgb), 0.7) !important;
     border-radius: 5px !important;
   }
-  #main .video-thumb .len7M,
-  #main .video-thumb + ._2DfqO {
+  .video-thumb .len7M,
+  .video-thumb + ._2DfqO {
     padding: 2px 4px !important;
     background-color: rgba(var(--bg-1-rgb), 0.7) !important;
     border-radius: 5px !important;
   }
-  #main .video-thumb._3EMsd + ._2DfqO {
+  .video-thumb._3EMsd + ._2DfqO {
     right: 5px !important;
     bottom: 3px !important;
   }
