--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1487,6 +1487,9 @@ ac5 = var(--ac-5)
                 box-shadow: 0 -1px 0 bg5 i
             }
 
+            /// Someone who's not in your contacts footer -> remove double top-border
+            ._2k-2Z { border-top: none }
+
             /// Emoji quick-picker.
             [data-list-scroll-container] {
                 border-bottom: 1px solid bg5 i
