--- a/wa.user.css
+++ b/wa.user.css
@@ -6,14 +6,14 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.16.2
+@version      2.16.3
 @license      MIT
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
   :root:not(#z),
   .dark:not(#z) {
-    --version: 'Dark-WhatsApp Lite 2.16.2 — July 22nd, 2020';
+    --version: 'Dark-WhatsApp Lite 2.16.3 — July 24th, 2020';
     --message: 'Towards v3 of DWA! Updating to `2.2029.4` of WhatsApp Web; check the changelog to see what is new!';
     --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
     --ui-font: 'font_name', Segoe UI, Helvetica Neue, Helvetica, Lucida Grande, Arial, Ubuntu, Cantarell, Fira Sans, sans-serif !important;
@@ -928,14 +928,18 @@
   #app > div > [tabindex] #side > header + span > div [data-icon = 'x'] svg path {
     fill: var(--fg-5);
   }
+  #app > div > [tabindex] ._14VS3 > ._1V8rX {
+    border-left: 1px solid var(--bg-5) !important;
+  }
   #app > div > [tabindex] ._14VS3 > ._1V8rX .copyable-area > header {
     border-bottom: 1px solid var(--bg-5) !important;
   }
   ._2Bps4 {
     box-shadow: 0 0 0 1px var(--bg-4) !important;
   }
-  #app > div > [tabindex] ._1WWP0 {
-    box-shadow: 1px 0 0 var(--bg-5) !important;
+  .dark .three ._2vJ01,
+  .dark .three ._2-aNW {
+    border-right: none !important;
   }
   span[class][data-icon = 'checkbox-round-checked'] [fill = '#00BFA5'] {
     fill: var(--ac-0);
@@ -961,6 +965,7 @@
   }
   #main > header {
     border-bottom: 1px solid var(--bg-5) !important;
+    border-right: none !important;
     border-color: var(--bg-5) !important;
   }
   #main > header::after {
@@ -1026,6 +1031,9 @@
   #main > footer div[style $= 'translateY(0%);'],
   #main > footer div[style $= 'translateY(0px);'] {
     box-shadow: 0 -1px 0 var(--bg-5) !important;
+  }
+  #main > footer ._2k-2Z {
+    border-top: none;
   }
   #main > footer [data-list-scroll-container] {
     border-bottom: 1px solid var(--bg-5) !important;
