vars: fix selected item bg in mentions menu
Closes #174.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -504,8 +504,8 @@ ac5 = var(--ac-5)
         --compose-input-border-focused-rgb: var(--bg-5-rgb) //65,90,103;
         --compose-panel-background: var(--bg-3) //#1e2428;
         --compose-panel-background-rgb: var(--bg-3-rgb) //29.591,36.36026,40.309;
-        --compose-panel-background-hover: var(--ac-0) //#151e23;
-        --compose-panel-background-hover-rgb: var(--ac-0-rgb) //21,30,35;
+        --compose-panel-background-hover: var(--bg-4) //#151e23;
+        --compose-panel-background-hover-rgb: var(--ac-4-rgb) //21,30,35;
         --compose-primary: var(--fg-1) //#f1f1f2;
         --compose-primary-rgb: var(--fg-1-rgb) //241,241,242;
         --conversation-panel-background: var(--bg-1) //#0b1419;
